# Payload-Visualisation---Metrics_PAL_Robotics

./: README.md
1. Describe the step you need to have ROS 2 in your PCs/: steps.txt
1_Describe the step you need to have ROS 2 in your PCs/: readme.md  steps.txt
2_Tiago_Robot_Visualisation/: Readme.md  video_link
3. pinocchio_robot/: CMakeLists.txt  package.xml
3. pinocchio_robot/launch/: pinocchio_test.launch.py
3. pinocchio_robot/src/: collision_check.cpp  jacobian.cpp  kinematics.cpp  pinocchio_node.cpp  test_pinocchio_node.cpp
3. pinocchio_robot/urdf/: robot.urdf
3_Pinnochio/: CMakeLists.txt  README.md  package.xml
3_Pinnochio/config/: params.yaml
3_Pinnochio/include/ros@_pinnochio_node/: pinnochio_node.hpp
3_Pinnochio/launch/: pinnochio_node_launch.py
3_Pinnochio/src/: pinocchio_node.cpp
3_Pinnochio/test/: test_model_states.py
3_Pinnochio/urdf/: .urdf
