<?xml version="1.0"?>
<package format="3">
  <name>pinocchio_robot</name>
  <version>0.1.0</version>
  <description>ROS 2 node integrating Pinocchio for robot kinematics and collision checking</description>

  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <depend>rclcpp</depend>
  <depend>pinocchio</depend>
  <depend>urdf</depend>
</package>
